export const snapshot = {};

snapshot[`#lib.rgbify 1`] = `
"/* deno-fmt-ignore */
/* deno-fmt-ignore */
.foo {
  --bar: 255, 0, 0;
}
"
`;

snapshot[`#lib.hslify 1`] = `
"/* deno-fmt-ignore */
/* deno-fmt-ignore */
.foo {
  --bar: 0, 100%, 50%;
}
"
`;

